--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/yefeyfe/namaste-react#readme",
   "devDependencies": {
     "parcel": "^2.13.2",
-    "process": "^0.11.10"
+    "postcss": "^8.4.49",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.16"
   },
   "dependencies": {
     "react": "^18.3.1",
